fix: remove input jump on hover

--- a/packages/ocean-core/src/forms/_input.scss
+++ b/packages/ocean-core/src/forms/_input.scss
@@ -36,6 +36,7 @@
   &:focus-within {
     border-color: $color-brand-primary-down;
     border-width: $border-width-thin;
+    margin: -1px;
   }
 
   &--filled {
